# url-backoff-registry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/url_backoff_registry/: registry.py
src/url_backoff_utils/: __init__.py
tests/: test_registry.py
