[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "url-backoff-utils"
version = "0.1.0"
description = "In-memory URL backoff registry with sliding window thresholds."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
